# CUDA-practice

./: .gitmodules  README.md  pyproject.toml
cu-practice/: main.py
cu-practice/triton_ops/: element_mul.py
