[project]
name = "cu-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "triton>=3.2.0",
]
